 


[package]
name    = "fhe_regex_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
tfhe = { version = "=1.3.3", default-features = false,features = ["boolean", "shortint", "integer","internal-keycache","pbs-stats"]}
rand        = "0.8"
rayon       = "1.11"
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
bincode     = "1.3"
anyhow = "1.0"
bloomfilter = "1"
regex = "1.10.4"
once_cell   = "1.19"
